<resources>
    <string name="app_name">Aleia</string>
    <string name="filter_genre">filtrar\ngênero</string>
    <string name="suggestion_accepted">Aceitar sugestão</string>
    <string name="search_book">Buscar</string>
    <string name="add_book">Adicionar livro</string>
    <string name="title_book">Título do livro</string>
    <string name="title">Título: %1$s</string>
    <string name="title_and_genre">Título: %1$s | Gênero: %2$s</string>
    <string name="found_book">Livro encontrado!\nAdicionado com sucesso.</string>
    <string name="not_found_add_book">Adicionar assim mesmo</string>
    <string name="search_new_book">Nova busca</string>
    <string name="select_book">Selecione um livro</string>
    <string name="cover_book">Capa do livro %1$s</string>
    <string name="filter_by_genre">Filtrar por gênero</string>
    <string name="clean_filter">Limpar filtro</string>
    <string name="none_genre_available">Nenhum gênero disponível</string>
    <string name="refresh">Refresh</string>
    <string name="book_cover">book_cover</string>
    <string name="loading">Carregando</string>
    <string name="try_again">Tente novamente</string>
    <string name="error_title">Erro ao carregar informações</string>
    <string name="reload_books">Recomeçar sessão</string>
</resources>